Improved code readability, fixed horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
     html{
         height: 100%;
         width: 100vw;
-        overflow-x: hidden;
     }
     
     body{
@@ -9,11 +8,16 @@
         display: flex;
         flex-direction: column;
         margin: 0;
+        word-wrap: break-word;
+    }
+
+    .main   {
+        flex-grow: 1;
     }
     
     .row   {
         text-align: center;
-        margin: -20px;   
+        margin: 0px;   
     }
 
     .searcher   {
@@ -64,6 +68,42 @@
         font-size: 14px;
         margin-right: 5px;
         margin-left: 5px;
+    }
+
+    .container  {
+        display: flex;
+        flex-wrap: wrap;
+        height: 100%;
+    }
+    
+    .footer1 {
+        left: 0;
+        width: 100%;
+        background-color: rgb(241, 241, 241);
+        border: 1px;
+        text-align: left;
+        text-indent: 40px;
+        color: grey;
+        font-family: sans-serif;
+        font-size: 14px;
+    }
+
+    .footer2    {
+        left: 0;
+        width: 100%;
+        background-color: rgb(241, 241, 241);
+        border: 1px;
+        color: grey;
+        font-family: sans-serif;
+    }
+
+    .footer2 a  {
+        color: grey;
+        text-decoration: none;
+    }
+
+    .footer2 a:hover  {
+        text-decoration: underline;
     }
 
     #main_input {
@@ -176,42 +216,6 @@
         color: grey;
     }
 
-    .container  {
-        display: flex;
-        flex-wrap: wrap;
-        height: 100%;
-    }
     
-    .footer1 {
-        left: 0;
-        width: 100%;
-        background-color: rgb(241, 241, 241);
-        border: 1px;
-        text-align: left;
-        text-indent: 40px;
-        color: grey;
-        font-family: sans-serif;
-        font-size: 14px;
-    }
 
-    .footer2    {
-        left: 0;
-        width: 100%;
-        background-color: rgb(241, 241, 241);
-        border: 1px;
-        color: grey;
-        font-family: sans-serif;
-    }
-
-    .footer2 a  {
-        color: grey;
-        text-decoration: none;
-    }
-
-    .footer2 a:hover  {
-        text-decoration: underline;
-    }
-
-    .main   {
-        flex-grow: 1;
-    }
+  
